--- a/package.json
+++ b/package.json
@@ -12,20 +12,31 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/uniqid": "^5.2.0",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.1",
     "electron": "^8.2.2",
     "html-webpack-plugin": "^4.2.0",
+    "less-loader": "^6.2.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "electron-store": "^6.0.0",
+    "fs": "0.0.1-security",
+    "re-resizable": "^6.5.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "uniqid": "^5.2.0"
   }
 }
