--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "electron-react-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/main.js",
+  "main": "src/electron-starter.js",
   "scripts": {
+    "dist:linux": "npm run build:react && electron-builder --linux",
+
+    "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
+
     "dev:electron": "NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
     "dev:react": "NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development"
   },
@@ -23,6 +27,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
     "electron": "^8.2.2",
+    "electron-builder": "^22.8.0",
     "html-webpack-plugin": "^4.2.0",
     "less-loader": "^6.2.0",
     "style-loader": "^1.2.1",
