--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "electron-react-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "src/electron-starter.js",
+  "main": "public/electron-starter.js",
   "scripts": {
     "dist:linux": "npm run build:react && electron-builder --linux",
-
     "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
-
     "dev:electron": "NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
     "dev:react": "NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development"
   },
